# raspberry-iot-dashboard

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  extensions.py  models.py
app/errors/: __init__.py
app/links/: __init__.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: 404.html  500.html  base.html  edit.html  footer.html  header.html  home.html  new.html
app/utils/: __init__.py
app/views/: __init__.py
