[tool.poetry]
name = "raspberry-iot-dashboard"
version = "0.0.0"
description = "A customized IoT-powered website with Flask, Redis, S3, Nginx, and more!"
authors = ["lauslim12 <nicholasdwiarto@yahoo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lauslim12/raspberry-iot-dashboard"
repository = "https://github.com/lauslim12/raspberry-iot-dashboard"
documentation = "https://github.com/lauslim12/raspberry-iot-dashboard"
keywords = [
  "embedded-systems",
  "internet-of-things",
  "raspberry-pi",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Flask",
  "Intended Audience :: Education",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation",
  "Topic :: Database",
  "Topic :: Database :: Front-Ends",
  "Topic :: Desktop Environment",
  "Topic :: Internet",
  "Topic :: Software Development :: Embedded Systems",
]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
redis = "^3.5.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.18.0"
Flask-Compress = "^1.10.1"
Flask-Cors = "^3.0.10"
flask-talisman = "^0.8.1"
Flask-Limiter = "^1.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.1"

[tool.isort]
profile = "black"
line_length = "88"
multi_line_output = "3"
include_trailing_comma = "True"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
